# tessera

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_VERIFICATION.md  FIXES_APPLIED.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  TAILWIND_V4_MIGRATION.md  USAGE_EXAMPLES.md  detailed_design_plan.txt  example_mate.ron  gui_example.txt  package-lock.json  package.json  project.ron  system_overview.txt  test_analysis_comparison.rs
cli/: Cargo.toml
cli/src/: commands.rs  impact_service.rs  interactive.rs  main.rs  utils.rs
cli/src/commands/: impact.rs  links.rs  mod.rs  pm.rs  quality.rs  requirements.rs  risk.rs  team.rs  tol.rs  verification.rs
crates/core/: Cargo.toml
crates/core/src/: entity_manager.rs  entity_selector.rs  error.rs  git.rs  id.rs  lib.rs  linking_helper.rs  links.rs  project.rs  traits.rs  utils.rs
crates/pm/: Cargo.toml
crates/pm/src/: baseline.rs  data.rs  (+12 more)
crates/quality/: Cargo.toml
crates/quality/src/: auto_scoring.rs  commands.rs  data.rs  lib.rs  migration.rs  repository.rs  risk_analysis.rs  scoring_menu.rs  traceability_matrix.rs  traceability_menu.rs
crates/requirements/: Cargo.toml
crates/risk/: Cargo.toml
crates/risk/src/: analysis.rs  commands.rs  controls.rs  data.rs  lib.rs  repository.rs  scoring.rs
crates/tessera-impact/: Cargo.toml
crates/tessera-impact/src/: analysis.rs  config.rs  git.rs  hooks.rs  lib.rs  lifecycle.rs
crates/tessera-team/: Cargo.toml
crates/tessera-team/src/: lib.rs  repository.rs
crates/tessera-team/src/cli/: mod.rs
crates/tessera-team/src/entities/: approval_rule.rs  mod.rs  role.rs  team.rs  team_member.rs
crates/tessera-team/src/integration/: impl_traits.rs  mod.rs  traits.rs
crates/tessera-team/src/repositories/: approval_rule_repo.rs  mod.rs  role_repo.rs  team_member_repo.rs  team_repo.rs
crates/tessera-team/src/services/: git_approval_manager.rs  mod.rs  role_service.rs  team_service.rs
crates/tol/: Cargo.toml
crates/tol/src/: analysis.rs  commands.rs  data.rs  distributions.rs  lib.rs  plotting.rs  process_capability.rs  repository.rs  sensitivity.rs
crates/verification/: Cargo.toml
crates/verification/src/: commands.rs  data.rs  execution.rs  integration.rs  lib.rs  reporting.rs  repository.rs
data/simulations/: stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_020013.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_020752.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_021624.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_021730.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_022334.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_023025.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_023807.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_024705.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_033452.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_034414.csv  stackup_8d8c19a7-0ba8-43df-aa1c-22f44dfcf379_20250712_035331.csv
impact/config/: impact_config.ron  team_config.ron  workflow_config.ron
pm/: baselines.ron  calendars.ron  issues.ron  milestones.ron  pm_risks.ron  resources.ron  schedules.ron  tasks.ron
quality/: controls.ron  inputs.ron  outputs.ron  requirements.ron  risks.ron  verifications.ron
requirements/: design_inputs.ron  design_outputs.ron  requirements.ron
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: baseline_commands.rs  calculation_commands.rs  calendar_commands.rs  design_commands.rs  hazard_commands.rs  manufacturing_commands.rs  milestone_commands.rs  mod.rs  requirement_commands.rs  resource_commands.rs  risk_commands.rs  risk_control_commands.rs  task_commands.rs  validation_commands.rs  verification_commands.rs
src-tauri/src/core/: app_state.rs  calculation_engine.rs  entity_manager.rs  error.rs  link_manager.rs  mod.rs
src-tauri/src/core/managers/: design_manager.rs  manufacturing_manager.rs  mod.rs  requirement_manager.rs  risk_manager.rs  task_manager.rs  testing_manager.rs
src-tauri/src/models/: config.rs  design.rs  entity.rs  link.rs  manufacturing.rs  mod.rs  requirement.rs  risk.rs  task.rs  testing.rs
src-tauri/src/storage/: mod.rs  ron_storage.rs
src/atlas/: .gitignore  CLAUDE.md  Cargo.toml  mates.ron  project.ron
src/atlas/components/: pin_rev_a.ron  plate_rev_a.ron
src/atlas/src/: main.rs
src/atlas/src/analysis/: cli_support.rs  mod.rs
src/atlas/src/cli/: analysis.rs  component.rs  feature.rs  interactive.rs  mate.rs  mod.rs  project.rs  visualize.rs
src/atlas/src/config/: component.rs  feature.rs  mate.rs  mod.rs  project.rs
src/atlas/src/file/: component.rs  mates.rs  mod.rs  project.rs
src/atlas/src/prompts/: analysis.rs  component.rs  feature.rs  mate.rs  mod.rs  navigation.rs  utils.rs
src/atlas/src/state/: mod.rs
src/atlas/src/ui/: analysis.rs  components.rs  dependency_matrix.rs  dialog.rs  dialog_widgets.rs  git_control.rs  mates.rs  mod.rs  project.rs
src/atlas/src/visualization/: ascii.rs  mod.rs  plots.rs  svg.rs
src/blueprint/: CLAUDE.md  Cargo.toml  NAVIGATION.md  goals.md  project.ron
src/blueprint/src/: lib.rs  main.rs
src/blueprint/src/cli/: commands.rs  interactive.rs  mod.rs
src/blueprint/src/core/: baseline.rs  baseline_manager.rs  calendar.rs  calendar_import.rs  issue.rs  milestone.rs  mod.rs  progress.rs  project.rs  resource.rs  risk.rs  task.rs
src/blueprint/src/git/: integration.rs  mod.rs
src/blueprint/src/reporting/: cost.rs  dashboard.rs  gantt.rs  mod.rs  resource_utilization.rs
src/blueprint/src/scheduling/: critical_path.rs  engine.rs  mod.rs  optimizer.rs  resource_optimization.rs
src/blueprint/src/templates/: mod.rs
src/blueprint/templates/: web-app.ron
src/lib/: api.ts
src/stores/: useEntityStore.ts  useUIStore.ts
src/types/: index.ts
team/: members.ron  roles.ron
test_project/: project.ron
test_project_integration/: project.ron
tol/: analyses.ron  components.ron  features.ron  mates.ron  stackups.ron
(+32 files in other folders)
