[workspace]
members = [
    "cli",
    "crates/core",
    "crates/requirements",
    "crates/risk",
    "crates/verification",
    "crates/pm",
    "crates/quality",
    "crates/tol",
    "crates/tessera-team",
]
resolver = "2"
default-members = ["cli"]

[workspace.dependencies]
# CLI and User Interface
clap = { version = "4.4", features = ["derive", "cargo"] }
inquire = { version = "0.7", features = ["date"] }
fuzzy-matcher = "0.3"
console = "0.15"
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

# Data Format and Serialization
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Collections and Data Structures
indexmap = { version = "2.1", features = ["serde"] }
petgraph = "0.6"

# File System and Git
git2 = "0.18"
walkdir = "2.4"
dirs = "5.0"

# Mathematical Operations
rand = "0.8"
rand_distr = "0.4"
statrs = "0.18"
ordered-float = "4.0"

# Development Dependencies
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"