[package]
name = "tessera"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tessera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Desktop framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
toml = "0.8"

# Database - using older rusqlite for now, will add sqlx later if needed
rusqlite = { version = "0.31", features = ["bundled"] }

# Graph operations
petgraph = "0.6"

# Hashing for change detection
blake3 = "1.5"

# UUID generation
uuid = { version = "1.8", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistical analysis (for tolerance Monte Carlo)
statrs = "0.16"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# Testing
rstest = "0.19"
tempfile = "3.10"
mockall = "0.12"
proptest = "1.4"

# Benchmarking
criterion = "0.5"

