[package]
name = "tessera-risk"
version = "0.1.0"
edition = "2021"
description = "Risk management for Tessera engineering toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tessera/tessera"
keywords = ["risk", "engineering", "fmea", "controls", "assessment"]
categories = ["development-tools", "engineering"]

[dependencies]
# Core dependencies
tessera-core = { path = "../core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

# CLI and UI
inquire = "0.7"
colored = "2.0"
comfy-table = "7.0"

# Error handling
thiserror = "1.0"

# Mathematical operations for risk calculations
ordered-float = "4.0"

[dev-dependencies]
tempfile = "3.0"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = []
# Future features for extensibility
advanced-scoring = []
risk-modeling = []
mitigation-planning = []
integration-api = []