[package]
name = "tessera-team"
version = "0.1.0"
edition = "2021"
authors = ["Tessera Contributors"]
description = "Team management module for Tessera engineering toolkit"
license = "MIT OR Apache-2.0"

[dependencies]
tessera-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
colored = "2.1"
comfy-table = "7.1"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"