[package]
name = "tessera-tol"
version = "0.1.0"
edition = "2021"

[dependencies]
tessera-core = { path = "../core" }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }
inquire = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_encoder"] }