[package]
name = "tessera-verification"
version = "0.1.0"
edition = "2021"
description = "Verification and testing framework for Tessera engineering toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tessera/tessera"
keywords = ["verification", "testing", "procedures", "validation", "automation"]
categories = ["development-tools", "testing", "engineering"]

[dependencies]
# Core dependencies
tessera-core = { path = "../core" }

# Cross-module integration
tessera-requirements = { path = "../requirements" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

# CLI and UI
inquire = "0.7"
colored = "2.0"
comfy-table = "7.0"

# Error handling
thiserror = "1.0"

# Future dependencies for test execution
# tokio = { version = "1.0", features = ["full"], optional = true }
# serde_json = { version = "1.0", optional = true }
# reqwest = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = []
# Future features for extensibility
test-automation = []
procedure-execution = []
reporting = []
integration-testing = []
performance-testing = []