[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI Framework
clap = { version = "4.0", features = ["derive"] }
inquire = "0.7"
console = "0.15"
indicatif = "0.17"

# Core functionality
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.1"

# Analysis functionality
petgraph = "0.6.5"  # For dependency graphs
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.18.0"

# Visualization
textplots = "0.8"
svg = "0.17"

# File handling
dirs = "5.0"
walkdir = "2.4"

# String processing for fuzzy search
fuzzy-matcher = "0.3"
